What is new in TwoLAME 
======================


Version 0.3.10 (2007-?-?)
-------------------------

- Added win32/winutil.h to tarball - fixes bug #1629945
- Fixed presentation of --enable-debug in configure script


Version 0.3.9 (2006-12-31)
--------------------------

- Fix for Windows in simple frontend: open files in binary mode
   * thanks to Kurien Mathew
- (libtwolame) Fixed energy level support
   * thanks to Staale Helleberg
- Nows displays the version number of libsndfile in frontend
   * as suggested by Elio Blanca
- Changed documentation build system, so you have to run it manually
- Buffer overrun fix in new_extension()
- (libtwolame) Added warning that DAB support is still broken
- (libtwolame) Added twolame_get_framelength() to return number of bytes per frame
- Added TWOLAME_SAMPLES_PER_FRAME macro, clarifying that there are 
  always 1152 samples per frame in Layer 2
- Frontend now displays extra information
   * Duration of input file (if known)
   * Total number of frames to be encoded and percentage complete
   * The filesize of the output file
 - Cleaned up source files so that it is consistent and all uses tabs (tab width 4)  



Version 0.3.8 (2006-06-19)
--------------------------

- (libtwolame) Fixed CRC protection
- More code tidying
- pkg-config is no-longer required (but is recommended)
- frontend now has the exectuable suffix appended to filename
- added -std=c99 to the compiler options


Version 0.3.7 (2006-05-07)
--------------------------

- (libtwolame) Added twolame_encode_buffer_float32() function
- (libtwolame) Fix NAN bug for AMD64 processors
- Checks type sizes of short and float


Version 0.3.6 (2006-12-25)
--------------------------

- Removed comma which was causing problems with -pedantic
   * Thanks to Akos Maroy
- (libtwolame) Added libtool library versioning


Version 0.3.5 (2005-11-29)
--------------------------

- (libtwolame) Added back twolame_get_VBR_q/twolame_set_VBR_q
- More documentation is installed

