@@ -7,6 +7,7 @@ Version 0.3.10 (2007-?-?)
 
 - Added win32/winutil.h to tarball - fixes bug #1629945
 - Fixed presentation of --enable-debug in configure script
+- Added twolame_encode_buffer_float32_interleaved()
 
 
 Version 0.3.9 (2006-12-31)
